maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: reassignment to val
  count=count+1
       ^PledgeMaze:23: error: reassignment to val
    count=count-1
         ^PledgeMaze:29: error: reassignment to val
      count=count-1
           ^PledgeMaze:35: error: reassignment to val
    count=count+1
         ^PledgeMaze:38: error: reassignment to val
      count=count-1
           ^