maze.pledge.PledgeMaze.scala.code
override def run() {
  var count=0
  while (isOverBaggle()==false){
      while(isFacingWall()==false){
        forward()
  }
    right()
    count=count-1
    while (getDirection != Direction.NORTH && isOverBaggle()==false && count==0){
    keepHandOnSideWall(count)
    }
  }
  pickupBaggle()
}


def keepHandOnSideWall(count : Int){
  left()
  count=count+1
  if (isFacingWall()==true){
    right()
    count=count-1
    if (isFacingWall()==false){
      forward()
    }
    else{
      right()
      count=count-1
    }
  }
  else {
    forward()
    left()
    count=count+1
    if (isFacingWall()==true){
      right()
      count=count-1
      if (isFacingWall()==false){
        forward()
      }
    }
    else{
      forward()
    }
  }
}